test/bad/nullables/op11.px

class A def
    Int x: 0

A? a = A()
a?.y
